--- a/css/style.css
+++ b/css/style.css
@@ -1308,10 +1308,39 @@ footer span {
 
 .admin_pages_create .title {
   text-align: center;
-  margin: 5% 0;
+  margin: 4% 0 3%;
 }
 
-.admin_pages_create .create_block_student {
+.admin_pages_create .create-for-admin {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.admin_pages_create .create-for-admin * {
+  display: block;
+}
+
+.admin_pages_create .create-for-admin input {
+  width: 100%;
+  font-size: 22px;
+  line-height: 25px;
+  font-weight: normal;
+  border-bottom: 1.3px solid #4c4c4c;
+  margin: 0 0 10px;
+  padding: 5px 0;
+}
+
+.admin_pages_create .create-for-admin .select {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1320,82 +1349,39 @@ footer span {
           justify-content: space-between;
 }
 
-.admin_pages_create .create_block_student div {
-  font-size: 30px;
-  line-height: 35px;
-  max-width: 550px;
+.admin_pages_create .create-for-admin .select * {
+  width: 45%;
+}
+
+.admin_pages_create .create-for-admin .select select {
   width: 100%;
+  font-size: 20px;
+  font-weight: normal;
+  margin: 10px 0;
+  border-bottom: 1px solid #4c4c4c;
+  padding: 5px;
 }
 
-.admin_pages_create .create_block_student div label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.admin_pages_create .create_block_student div input {
-  font-size: 30px;
-  line-height: 35px;
-  border: 1px solid #4c4c4c;
-  margin: 20px 0;
-  border-radius: 5px;
-  max-width: 350px;
+.admin_pages_create .create-btn {
+  max-width: 500px;
   width: 100%;
-  padding: 1px 10px;
-}
-
-.admin_pages_create .create_block_student .fio {
+  margin: 20px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-.admin_pages_create .create_block_student .login {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+.admin_pages_create .create-btn * {
+  font-size: 23px;
+  font-weight: 600;
+  color: #4c4c4c;
+  padding: 10px 15px;
 }
 
-.admin_pages_create .create_block_student .center_block_create {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.admin_pages_create .control_buts {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.admin_pages_create .control_buts button {
-  margin: 5px 50px;
-  border-radius: 10px;
-}
-
-.admin_pages_create .control_buts button.reset {
-  background-color: #999;
+.admin_pages_create .create-btn *:hover {
+  background: rgba(76, 76, 76, 0.25);
 }
 
 .block_spravka {
@@ -1420,11 +1406,6 @@ footer span {
 
 .info_page {
   padding: 30px 0;
-}
-
-.info_page .zagl {
-  height: 30px;
-  border: 1px solid black;
 }
 
 .info_page .name {
@@ -1463,7 +1444,7 @@ footer span {
 }
 
 .info_page .edit_line_student {
-  text-align: center;
+  text-align: end;
 }
 
 @media screen and (max-width: 1220px) {
